--- a/main.html
+++ b/main.html
@@ -4,10 +4,27 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		main{
+			height:150 px;
+			width: 150 px;
+			background-color:#000000;
+		}
+		.hello-accio{
+			color:white;
+			margin-left: 32 px;
+			padding: 10 px;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main class="accio" id="job">
+		<p class="hello-accio">
+			Hello Accio Job
+		</p>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
