--- a/main.html
+++ b/main.html
@@ -5,13 +5,13 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		main{
+		#job{
 			height:150 px;
 			width: 150 px;
 			background-color:#000000;
 		}
 		.hello-accio{
-			color:white;
+			color: white;
 			margin-left: 32 px;
 			padding: 10 px;
 		}
