--- a/main.html
+++ b/main.html
@@ -5,15 +5,15 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		#job{
-			height:150 px;
-			width: 150 px;
+		main{
+			height:150px;
+			width: 150px;
 			background-color:#000000;
 		}
 		.hello-accio{
 			color: white;
-			margin-left: 32 px;
-			padding: 10 px;
+			margin-left: 32px;
+			padding: 10px;
 		}
 	</style>
 </head>
